# ndtbl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CMakeLists.txt  COPYING.md  README.md  codecov.yml
.github/workflows/: ci.yml  release-gh.yml  release-pypi.yml
app/: CMakeLists.txt  ndtbl_app.cpp  ndtbl_convert.cpp  ndtbl_inspect.cpp
benchmarks/: CMakeLists.txt  README.md  lookup_benchmarks.cpp
cmake/: ndtblConfig.cmake.in
doc/: CMakeLists.txt  conf.py  cppapi.rst  format.rst  index.rst  pythonapi.rst  pythonintro.rst  requirements-rtd.txt
include/ndtbl/: any_field_group.hpp  axis.hpp  field_group.hpp  grid.hpp  io.hpp  metadata.hpp  ndtbl.hpp  payload.hpp  runtime_field_group.hpp  types.hpp
include/ndtbl/detail/: binary_io.hpp  mapped_payload.hpp
python/ndtbl/: README.md  pyproject.toml  uv.toml
python/ndtbl/doc/: api.rst  conf.py  index.rst
python/ndtbl/notebooks/: demo.ipynb
python/ndtbl/src/ndtbl/: __init__.py  __main__.py  _binary.py  cli.py  generate.py  io.py  model.py
python/ndtbl/tests/: conftest.py  test_cli.py  test_generate.py  test_io.py  test_model.py  test_ndtbl.py
src/: CMakeLists.txt  ndtbl.cpp
tests/: CMakeLists.txt  README.md  ndtbl_interpolation_t.cpp  ndtbl_io_t.cpp  ndtbl_t.cpp  test_support.hpp
