[build-system]
requires = [
    "hatchling>=1.25",
]
build-backend = "hatchling.build"

[project]
name = "ndtbl"
description = "This package provides a pure-Python way to create, inspect, and validate .ndtbl files without depending on the C++ binaries."
readme = "README.md"
maintainers = [
    { name = "Thomas Isensee", email = "thomas.isensee@iwr.uni-heidelberg.de" },
]
version = "0.0.1"
requires-python = ">=3.10"
license-files = ["LICEN[CS]E*"]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
]

[project.urls]
repository = "https://github.com/thomasisensee/ndtbl"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]
lint = [
    "mypy",
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
ndtbl = "ndtbl.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ndtbl"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = "doc"

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
