[build-system]
requires = [
    "hatchling>=1.25",
]
build-backend = "hatchling.build"

[project]
name = "ndtbl"
description = "This package provides a pure-Python way to create, inspect, and validate .ndtbl files without depending on the C++ binaries."
readme = "README.md"
authors = [
    { name = "Thomas Isensee", email = "thomas.isensee@iwr.uni-heidelberg.de" },
]
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
keywords = [
  "ndtbl",
  "binary-format",
  "lookup-table",
  "multidimensional-table",
  "tabulated-data",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "numpy",
]

[project.urls]
repository = "https://github.com/thomasisensee/ndtbl"
documentation = "https://ndtbl.readthedocs.io/"

[project.optional-dependencies]
docs = [
    "myst_parser",
    "sphinx",
    "sphinx_rtd_theme",
]
lint = [
    "mypy",
    "ruff",
]
notebooks = [
    "jupyterlab",
    "matplotlib",
]
tests = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
ndtbl = "ndtbl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ndtbl"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = "doc"

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/ndtbl/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
